[CHORE] Fix alignment issue

--- a/app/styles/articles.scss
+++ b/app/styles/articles.scss
@@ -47,6 +47,7 @@
 }
 .flex-center {
   display: flex;
+  text-align: center;
   justify-content: center;
 }
 .empty-message {
@@ -58,10 +59,15 @@
   color: #666;
 }
 .article-img {
-  padding: 50px;
-  height: 500px;
-  width: 500px;
+  margin-bottom: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
+  height: 300px;
+  width: 300px;
   float: right;
+  @media screen and (max-width: $screen-md) {
+    float: none;
+  }
 }
 .article-desc {
   overflow: hidden;
@@ -75,4 +81,9 @@
 }
 .article-content {
   padding-top: 10px;
+}
+.article-sub-desc {
+  padding-bottom: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
